fix home alignment & enlarge button

--- a/src/assets/scss/main/_tokyo.scss
+++ b/src/assets/scss/main/_tokyo.scss
@@ -43,8 +43,8 @@ svg {
   height: 15px;
 }
 img.svg {
-  width: 15px;
-  height: 15px;
+  width: 25px;
+  height: 25px;
 }
 ::-webkit-input-placeholder {
   /* WebKit, Blink, Edge */
@@ -291,12 +291,13 @@ hr.dotted {
   color: #767676;
   display: inline-block;
   font-weight: 500;
+  font-size: 15px;
   font-family: "Montserrat";
   transition: all 0.3s ease;
   cursor: pointer;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   .svg {
-    margin-right: 10px;
+    margin-right: 30px;
     opacity: 0.7;
     transition: all 0.3s ease;
     @media (max-width: 1200px) {
@@ -512,8 +513,8 @@ hr.dotted {
   transform: translateY(-5px);
 }
 .social li .svg {
-  width: 17px;
-  height: 17px;
+  width: 20px;
+  height: 20px;
 }
 
 /*---------------------------------------------------*/
@@ -1690,6 +1691,13 @@ body.modal {
   }
 }
 @media (max-width: 1200px) {
+  .tokyo_tm_all_wrap .leftpart .menu ul li {
+    margin-bottom: 0px;
+  }
+  img.svg {
+    width: 30px;
+    height: 30px;
+  }
   .tokyo_tm_mobile_menu {
     display: block;
   }
@@ -1741,7 +1749,7 @@ body.modal {
       display: none;
     }
     &:not(:last-child) {
-      margin-right: 15px;
+      margin-right: 25px;
     }
   }
   .tokyo_tm_all_wrap .rightpart {
@@ -1806,6 +1814,10 @@ body.modal {
   }
   .tokyo_tm_home .details {
     margin-left: 0px;
+  }
+  .tokyo_tm_home .details .job {
+    margin-left: auto;
+    margin-right: auto;
   }
   .tokyo_tm_about .description_inner {
     flex-direction: column;
